--- a/src/components/screens/lists/lists.module.scss
+++ b/src/components/screens/lists/lists.module.scss
@@ -40,7 +40,7 @@
     margin-left: 20px;
     padding: 2px 12px;
     border-radius: 5px 5px 0 0;
-    p {
+    button {
       font-size: 16px;
       font-weight: 600;
       color: #808191;
