--- a/src/components/screens/lists/lists.module.scss
+++ b/src/components/screens/lists/lists.module.scss
@@ -27,6 +27,7 @@
     margin-left: 10px;
   }
   &_listBlock {
+    height: 88%;
     width: 100%;
   }
   &_navigationList {
@@ -56,7 +57,7 @@
   &_body {
     padding: 20px;
     width: 100%;
-    height: 540px;
+    height: 97%;
     box-shadow:
       0px 1px 5px 0px #0000001f,
       0px 2px 2px 0px #00000024,
