functional for adding teachers/groups/subjects

--- a/src/components/reused/modal-window/modal-window.module.scss
+++ b/src/components/reused/modal-window/modal-window.module.scss
@@ -16,7 +16,7 @@
     overflow-y: auto;
 
     background-color: #fff;
-    padding: 25px;
+    // padding: 25px;
 
     &.center {
       top: 50%;
